Created html and scss skeletons and sample mixin

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,8 @@
-@import "abstracts/index";
 @import "base/index";
+@import "layout/index";
+@import "abstracts/index";
+
+@import "components/index";
+
+
+
