--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,29 @@
-h1 {
-  color: red; }
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+body {
+  width: 900px;
+  height: auto; }
+
+header {
+  padding: 10px;
+  background-color: gold;
+  font-size: 22px; }
+
+.first-button {
+  border: 2px solid black;
+  background-color: green;
+  width: 100px;
+  height: 100px; }
+  .first-button:hover {
+    background-color: yellow;
+    width: 150px;
+    height: 150px; }
 
 /*# sourceMappingURL=main.css.map */
